SkillGauge01-main/Frontend/my-react-app/bridge/base/db-expose.yaml
#! db-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: db
    namespace: my-react-app
    labels:
        com.docker.compose.project: my-react-app
        com.docker.compose.service: db
spec:
    selector:
        com.docker.compose.project: my-react-app
        com.docker.compose.service: db
    ports:
        - name: db-5432
          port: 5432
          targetPort: db-5432
